--- a/style.css
+++ b/style.css
@@ -688,6 +688,8 @@ span{
     color: #fff;
     font-size: 56px;
     padding-left: 7vw;
+    padding-right: 7vw;
+    max-width:760px;
 }
 
 .section-7 h3{
@@ -2650,6 +2652,8 @@ textarea {
     display: none;
 }
 
+
+
 .desktop-show-btn{
     display: flex !important;
     padding-top: 16px;
@@ -2704,6 +2708,10 @@ textarea {
 
     .z-index{
         transform: scale(0.9);
+    }
+
+    .btn-bottom{
+        width: 240px;
     }
 
 
@@ -2818,6 +2826,73 @@ textarea {
 
     .form-cta{
         width: 95vw !important;
+    }
+
+    .sticky-cta{
+        display: none;
+    }
+
+    .cta-height{
+        padding-bottom: 100px;
+    }
+
+
+    .sticky-reserve h3{ 
+        font-family: "Black";
+        font-size: 19px;
+        letter-spacing: 2%;
+        line-height: 1.1;
+    }
+
+    .sticky-reserve p{ 
+        font-family: "Medium";
+        font-size: 12px;
+        letter-spacing: 0%;
+        line-height: 1.3;
+        color: #4A4C49;
+        margin-top: 4px;
+    }
+
+    .sticky-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
+    .sticky-reserve{
+        display: flex;
+    }
+
+    .sticky-reserve h3{ 
+        font-family: "Black";
+        font-size: 19px;
+        letter-spacing: 2%;
+        line-height: 1.1;
+    }
+
+    .sticky-reserve p{ 
+        font-family: "Medium";
+        font-size: 12px;
+        letter-spacing: 0%;
+        line-height: 1.3;
+        color: #4A4C49;
+        margin-top: 4px;
+    }
+
+    .sticky-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
+    .info-left{
+        width: 100vw;
+    }
+
+        .menu li{
+        opacity: 1.0;
     }
 
 
@@ -3124,32 +3199,7 @@ textarea {
 
 
 
-    .sticky-reserve{
-        display: flex;
-    }
 
-    .sticky-reserve h3{ 
-        font-family: "Black";
-        font-size: 19px;
-        letter-spacing: 2%;
-        line-height: 1.1;
-    }
-
-    .sticky-reserve p{ 
-        font-family: "Medium";
-        font-size: 12px;
-        letter-spacing: 0%;
-        line-height: 1.3;
-        color: #4A4C49;
-        margin-top: 4px;
-    }
-
-    .sticky-text{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-    }
 
     .body-container{
         display: flex;
@@ -3995,9 +4045,7 @@ textarea {
         width: 60vw;
     }
 
-    .menu li{
-        opacity: 1.0;
-    }
+
 
     .hero-left{
         min-height: 0px !important; 
@@ -4082,7 +4130,7 @@ textarea {
     .menu li:nth-child(1) {
     padding-top: 24px !important;
     }
-    
+
 }
 
 .grayed-out-month .flatpickr-day {
