--- a/style.css
+++ b/style.css
@@ -447,7 +447,7 @@ p{
     font-family: "Bold";
     font-size: 19px;
     line-height: 1.3;
-    letter-spacing: 2.5%;
+    letter-spacing: 2%;
     color: #ffffff;
 }
 
@@ -526,6 +526,7 @@ span{
 
 .section-1 p{
     margin-top: 30px;
+;
 }
 
 .section-2 h2{
