--- a/style.css
+++ b/style.css
@@ -3775,6 +3775,7 @@ textarea {
         height: 318px;
         align-items: center;
         justify-content: start;
+        padding-right: 0px;
     }
 
     .section-7 img{
