--- a/style.css
+++ b/style.css
@@ -1319,11 +1319,12 @@ body{
     height: 100vh;
     bottom: 0;
     left: 0;
-    object-fit: contain;
+    object-fit: fill;
 
 }
 
 .z-index{
+    transform: scale(1.0);
     z-index: 99;
     display: flex;
     justify-content: center;
@@ -1552,7 +1553,6 @@ body.modal-open {
   width: 48vw;
   height: 100%;
   object-fit: cover;
-  min-height: 827px;
 }
 
 .video-insert-2{
@@ -1628,7 +1628,7 @@ body.modal-open {
 }
 
 .info-left{
-    margin-top: 40px;
+    margin-top: 32px;
     width: 45vw;
     height: auto;
     scroll-behavior: smooth;
@@ -4150,6 +4150,7 @@ textarea {
     .about-hero h2{
         padding: 0px 16px;
         margin-top: 20px !important;
+        margin-bottom: 70px;
     }
 
 
@@ -4210,6 +4211,54 @@ textarea {
         padding-right: 0vw;
     }
 
+
+}
+
+@media only screen and (max-height: 827px) and (min-width: 800px) {
+
+    .hero{
+        height: 100%;
+    }
+
+    .z-index{
+        transform: scale(0.9);
+        margin-left: -4%;
+    }
+
+    .hero-left{
+        height: 100vh;
+        min-height: 640px;
+        padding-bottom: 4vh;
+    }
+
+    .video-insert{
+        height: 100%;
+        min-height: 100vh;
+    }
+
+    .day-tour-hero{
+        justify-content: flex-start;
+        padding-top: 100px;
+        height: 100%;
+    }
+
+    .about-hero{
+        justify-content: flex-start;
+        padding-top: 100px;
+        height: 100%;
+    }
+
+    .day-tour-hero .about-hero{
+        min-height: 720px !important;
+    }
+
+    .day-tour-hero .button-container{
+        margin-top: 42px;
+    }
+
+    .day-tour-hero .day-tours-included-container{
+        margin-top: 36px;
+    }
 
 }
 
