--- a/style.css
+++ b/style.css
@@ -4217,7 +4217,8 @@ textarea {
 @media only screen and (max-height: 827px) and (min-width: 800px) {
 
     .hero{
-        height: 100%;
+        height: 100vh;
+        min-height: 720px;
     }
 
     .z-index{
@@ -4234,6 +4235,7 @@ textarea {
     .video-insert{
         height: 100%;
         min-height: 100vh;
+
     }
 
     .day-tour-hero{
