--- a/style.css
+++ b/style.css
@@ -1489,7 +1489,7 @@ body{
     width: 28vw;
     height: 97vh;
     object-fit: cover;
-    object-position: -333px;
+    object-position: 28%;
     position: fixed;
 }
 
