--- a/style.css
+++ b/style.css
@@ -1319,7 +1319,7 @@ body{
     height: 100vh;
     bottom: 0;
     left: 0;
-    object-fit: fill;
+    object-fit: cover;
 
 }
 
@@ -3495,7 +3495,7 @@ textarea {
     .hero-left img{
         height: 200%;
         width: 100%;
-        object-fit: contain;
+        object-fit: cover;
     }
 
     .hero-left h1, 
