--- a/style.css
+++ b/style.css
@@ -140,7 +140,15 @@ nav{
   padding-right: 10vw;
 }
 
+.footer-row-3{
+    display: flex;
+    align-items: flex-end;
+    gap: 32px;
+}
 
+.footer-authorized{
+    width: 96px;
+}
 
 
 
@@ -789,6 +797,7 @@ footer{
 .footer-row-2{
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
 }
 
 footer .menu button{
@@ -3962,6 +3971,16 @@ textarea {
     .footer-row-2{
         flex-direction: column;
         margin-left: 8px;
+        align-items: flex-start;
+    }
+
+    .footer-row-3{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
     }
 
     .footer-row-2 ul{
