--- a/style.css
+++ b/style.css
@@ -3948,6 +3948,7 @@ textarea {
 
     .button-container button{
         box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15);
+        padding: 20px 32px 20px 32px !important;  
     }
 
     .z-index{
@@ -3977,6 +3978,7 @@ textarea {
         width: 192px;
         margin-right: 12px;
         box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
+        padding: 20px 32px 20px 32px !important;
     }
 
     .info-left{
