--- a/style.css
+++ b/style.css
@@ -4912,12 +4912,32 @@ textarea {
     }
 
     .h1-h2{
-        margin-top: 32px !important;
+        margin-top: 28px !important;
     }
 
     .h2-h3{
         margin-top: 40px !important;
+        font-size: 16px !important;
+        line-height: 14px !important;
     }
+
+    .hero-left h4{
+        margin-bottom: 32px !important;
+    }
+
+    .price-loopy{
+        font-size: 24px !important;
+    }
+
+    .hero-left{
+        padding-bottom: 100px !important;
+    }
+
+    .button-container{
+        margin-top: 52px !important;
+    }
+
+
 
 }
 
@@ -4928,7 +4948,7 @@ textarea {
     }
 
     .hero-left h4{
-        margin-bottom: 40px !important;
+        margin-bottom: 40px;
     }
 
     .button-container{
