--- a/style.css
+++ b/style.css
@@ -3967,7 +3967,7 @@ textarea {
     }
 
     .z-index{
-        margin-top: 24px;
+        margin-top: 16px;
         align-items: center;
         width: 100vw;
     }
@@ -4771,20 +4771,23 @@ textarea {
     .h3-h1{
         font-size: 25vw;
         margin: 0px !important;
+        -webkit-text-stroke: 1.5px #DEAF68;
     }
 
     .h1-h2{
         font-size: 7.1vw;
         margin-top: 28px !important;
         width: 90vw;
+        line-height: 1.1 !important;
     }
 
     .h2-h3{
 
         font-size: 15px !important;
         margin-top: 34px !important;
-        margin-bottom: 16px !important;
+        margin-bottom: 10px !important;
         line-height: 16px !important;
+        transform: scale(0.95) !important;
     }
 
     .day-tour-h1{
