--- a/style.css
+++ b/style.css
@@ -4785,9 +4785,9 @@ textarea {
 
         font-size: 15px !important;
         margin-top: 34px !important;
-        margin-bottom: 10px !important;
+        margin-bottom: 8px !important;
         line-height: 16px !important;
-        transform: scale(0.95) !important;
+        transform: translateY(-10px); !important;
     }
 
     .day-tour-h1{
@@ -4933,7 +4933,7 @@ textarea {
     }
 
     .hero-left{
-        padding-bottom: 80px;
+        padding-bottom: 68px;
     }
 
     .button-container{
