--- a/style.css
+++ b/style.css
@@ -577,6 +577,7 @@ width: 50vw;
     margin-right: 1px;
     font-size: 20px !important; 
     transform: translateY(1px);
+    font-family: "Loopy" !important;
 }
 
 .loopy-section-span{
