--- a/style.css
+++ b/style.css
@@ -1561,12 +1561,17 @@ body{
     color: #1D1F1C !important;
 }
 
+.sub-h1-h2{
+    line-height: 1.3 !important;
+    margin-top: 40px !important;
+}
+
 .about-hero h1{
     font-size: 40px !important;
     line-height: 1.2 !important;
     letter-spacing: 1% !important;
       letter-spacing: 0.02em; /* Fallback for browsers that don't support % */
-      width: 50vw;
+      width: 95vw;
       max-width: 680px;
 }
 
@@ -4954,7 +4959,7 @@ textarea {
 
     .h1-h2{
         margin-top: 80px;
-        line-height: 1;
+        line-height: 1.1;
     }
 
     .hero-left h4{
