--- a/style.css
+++ b/style.css
@@ -3161,6 +3161,10 @@ textarea {
 
 @media only screen and (max-width: 990px) and (min-width: 720px) {
 
+    .gallery a{
+        width: 100%;
+    }
+
 
     .body-container{
         width: 92vw;
